<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/dialog_select_image"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn_Dialog_Image_Picker_Camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/Btn_Dialog_Image_Picker_Gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
