<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.ChangePasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:hintEnabled="false">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:ems="15"
            android:hint="@string/old_password"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:hintEnabled="false">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:ems="15"
            android:hint="@string/new_password"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPasswordTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:hintEnabled="false">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_background"
            android:ems="15"
            android:hint="@string/confirm_new_password"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/orange"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>