<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ocs.com.dr_tips.fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:id="@+id/choosePhotoView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePhotoImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@android:color/transparent"
                app:civ_border_color="@color/orange"
                app:civ_border_width="3dp"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/register_profile_upload" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_name" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="15"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/nameErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_email" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="15"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/emailErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_password" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="15"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/passwordErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmPasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_password" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="15"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/confirmPasswordErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@drawable/text_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_country" />

                <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            </LinearLayout>
            <TextView
                android:id="@+id/countryErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/register_mobile" />

                <EditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="15"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/mobileErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                app:srcCompat="@drawable/register_speciality" />

            <EditText
                android:id="@+id/specialityEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="15"
                android:hint="@string/speciality"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                app:srcCompat="@drawable/register_place_of_work" />

            <EditText
                android:id="@+id/workPlaceEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="15"
                android:hint="@string/place_of_work"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/edit_text_background"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                app:srcCompat="@drawable/register_tilte" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="15"
                android:hint="@string/title"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/orange"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


</ScrollView>
